# chess

./: LICENSE  README.md  __main__.py  pyproject.toml
chess/: __main__.py  constants.py  custom_typehints.py  game.py  main.py  types.py
chess/model/: board.py  game.py  game_state.py  move_generator.py  move_validator.py  pieces.py  player.py
test/model/: test_board.py  test_game.py  test_game_state.py  test_move_generator.py  test_move_validator.py  test_pieces.py
test/unit/model/: test_board.py  test_game.py  test_move_generator.py
