[tool.poetry]
name = "chess"
version = "0.1.0"
description = "Chess engine made in Python"
authors = ["lestherll <ljllacuna4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
